--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,7 +7,13 @@
 <body>
     <h1> Humdrum Conundrum </h1>
     <div class="board">
-        <p class="board__word"> <%= word %> </p>
+        <p class="board__word" id='set-word'> <%= word %> </p>
+    </div>
+    <div class="input-block">
+        <form method="POST" action="/guess" class='input-block__form'>
+            <input type="text" name="guess" class="input-block__guess">
+            <button type="input-block__btn btn">Submit</button>
+        </form>
     </div>
 </body>
 </html>
