--- a/views/win.ejs
+++ b/views/win.ejs
@@ -6,6 +6,9 @@
 </head>
 <body>
     <h1> Humdrum Conundrum </h1>
-    <h1> loser <%= guess %> </h1>
+    <h1> winner <%= guess %> </h1>
+    <form action="/" method="get">
+        <button type="submit">START AGAIN</button>
+    </form>
 </body>
 </html>
