--- a/public/scss/main.scss
+++ b/public/scss/main.scss
@@ -8,6 +8,44 @@ body {
     color: #222;
 }
 
+h1 {
+
+    :nth-child(4) {
+        transform: rotate(14deg);
+    }
+    :nth-child(6) {
+        transform: rotate(-12deg);
+    }
+
+    :nth-child(2) {
+        transform: rotate(-14deg);
+    }
+    :nth-child(9) {
+        transform: rotate(18deg);
+    }
+}
+.pop {
+    display: inline-block;
+    background-image: linear-gradient(to left, ivory, aliceblue );
+    padding: 5px 10px;
+    margin-right: 10px;
+    border-radius: 7px;
+    box-shadow: 3px 3px rgba(2, 2, 2, 0.5);
+}
+
+.previous-guess {
+    width: 100%;
+    display: block;
+    background-image: linear-gradient(to top, orange, red);
+    font-size: 30px;
+
+    p {
+        padding: 10px;
+        margin: 0;
+       
+    }
+}
+
 .board {
 
     background-color:darken(rgba(3, 140, 252, 1), 20);
